--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
   "dependencies": {
     "@fal-ai/client": "^1.6.1",
     "@fal-ai/server-proxy": "^1.1.1",
+    "@heroui/button": "^2.2.24",
+    "@heroui/card": "^2.2.23",
+    "@heroui/input": "^2.4.25",
+    "@heroui/modal": "^2.2.21",
+    "@heroui/react": "^2.8.2",
+    "@heroui/slider": "^2.4.21",
+    "@heroui/system": "^2.4.20",
+    "@heroui/tabs": "^2.2.21",
+    "@heroui/theme": "^2.4.20",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "better-auth": "^1.3.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "konva": "^9.3.22",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
@@ -28,13 +39,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.12",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
