--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@heroui/system": "^2.4.20",
     "@heroui/tabs": "^2.2.21",
     "@heroui/theme": "^2.4.20",
+    "@heroui/toast": "^2.0.14",
+    "@prisma/client": "^6.14.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slider": "^1.3.5",
@@ -32,10 +34,13 @@
     "konva": "^9.3.22",
     "lucide-react": "^0.525.0",
     "next": "15.4.4",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-konva": "^19.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zeptomail": "^6.2.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -46,7 +51,9 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
+    "prisma": "^6.14.0",
     "tailwindcss": "^4.1.12",
+    "tsx": "^4.20.4",
     "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
