--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@fal-ai/client": "^1.6.1",
     "@fal-ai/server-proxy": "^1.1.1",
+    "@heroui/badge": "^2.2.15",
     "@heroui/button": "^2.2.24",
     "@heroui/card": "^2.2.23",
+    "@heroui/chip": "^2.2.20",
     "@heroui/input": "^2.4.25",
     "@heroui/modal": "^2.2.21",
     "@heroui/react": "^2.8.2",
@@ -27,6 +29,7 @@
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@stripe/stripe-js": "^7.8.0",
     "better-auth": "^1.3.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -38,6 +41,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-konva": "^19.0.7",
+    "stripe": "^18.4.0",
     "tailwind-merge": "^3.3.1",
     "zeptomail": "^6.2.1",
     "zustand": "^5.0.8"
