Update README and env.example; simplify auth image styles
Expanded README with project overview, features, tech stack, setup instructions, and environment variable documentation. Updated env.example to include all required environment variables with comments. Simplified background image styling in authentication forms by removing dark mode filters.

--- a/env.example
+++ b/env.example
@@ -1,1 +1,31 @@
-FAL_KEY=
+# AI PROCESSING
+FAL_KEY=xxx
+
+# AUTHENTICATION
+BETTER_AUTH_SECRET=xxx
+BETTER_AUTH_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# DATABASE
+DATABASE_URL=xxx
+DIRECT_URL=xxx
+
+# GOOGLE OAUTH
+GOOGLE_CLIENT_ID=xxx
+GOOGLE_CLIENT_SECRET=xxx
+
+# STRIPE PAYMENTS
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=xxx
+STRIPE_SECRET_KEY=xxx
+STRIPE_WEBHOOK_SECRET=xxx
+STRIPE_CLI_WEBHOOK_SECRET=xxx
+
+# EMAIL SERVICE (ZeptoMail)
+ZEPTOMAIL_API_URL=api.zeptomail.ca/
+ZEPTO_MAIL_API_KEY=xxx
+EMAIL_FROM=noreply@tattootraceai.com
+EMAIL_FROM_NAME=TattooTraceAI
+EMAIL_REPLY_TO=noreply@tattootraceai.com
+
+# BETTER AUTH (Alternative URL)
+NEXT_PUBLIC_BETTER_AUTH_URL=http://localhost:3000
